[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "A fork of NousResearch/hermes-agent — tool-calling agent powered by Hermes models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "NousResearch", email = "nous@nousresearch.com" },
]
keywords = ["llm", "agent", "hermes", "tool-calling", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
hermes-agent = "hermes_agent.cli:app"

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-agent"
Repository = "https://github.com/NousResearch/hermes-agent"
Issues = "https://github.com/NousResearch/hermes-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# relaxed from upstream strict=true — too noisy for personal exploration
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov installed
addopts = "-v"

[tool.coverage.run]
source = ["src/hermes_agent"]
omit = ["tests/*"]
